Changelog
=========



2.1.3 (unreleased)
------------------

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]


2.1.2 (2012-09-19)
------------------

- Added quoting of bad chars like '(' or ')'.
  [phgross]


2.1.1 (2012-06-18)
----------------

- Made mails also findable (use IBaseDocument instead of IDocumentSchema)
  Issue #1595 Erweiterte Suche: Mails werden bei Suche nach Dokumentdatum nicht beruecksichtigt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1595
  [phgross]

- Disalbe unloadProtection for the advanced search form.
  Issue #1597 Meldung beim verlassen der Suche
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1597
  [phgross]


2.1 (2012-02-27)
----------------

- Added French translations.
  [ttschanz]

- Implements IE workaround for submitting the advanced search form on submit.
  Issue #1313 Erweiterte Suche: Formular kann im IE nicht mit <Enter> abgesendet werden.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1313/
  [phgross]

- Add condition to the javascript regisitration.
  [phgross]


2.0 (2011-11-17)
----------------

- Made the filing number search more comfortable:
  use the new ZCTextIndex 'searchable_filing_no'.
  Issue #1260 Suche nach Ablagenummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1260
  [phgross]

- added test-buildout for plone 4.1
  [eschmutz]

2.0b10 (2011-08-24)
-------------------

- expanded tests
  [eschmutz]

- Jenkins-integration
  [eschmutz]

- Setup testcase for plone.app.testing
  [eschmutz]

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712
  removed field task_responsible and changed translations
  [eschmutz]


2.0b9
-----

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712