@@ -6,6 +6,9 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- Added small adjustments for working also with the new plone.app.search.
+  [phgross]
+
 - Adjust javscripts: Use $ instead of deprecated jq.
   [phgross]
 
